# Wave

./: Cargo.toml  Makefile  README.md  index.html  install.sh  package-lock.json  package.json  style.css
.github/workflows/: documentation.yml  pages.yml
docs/source/: appendix.rst  conf.py  discretization.rst  governing_equation.rst  index.rst
docs/source/appendix/: discrete_energy_conservation.rst  external_forcing.rst  index.rst
docs/source/discretization/: index.rst  spatial_discretization.rst  temporal_discretization.rst
docs/source/governing_equation/: index.rst
docs/source/governing_equation/frequency_domain/: derivation.rst  energy_balance.rst
docs/source/governing_equation/physical_domain/: derivation.rst  energy_balance.rst
include/: config.h  constant.h  convert.h  coordinate.h  init.h  integrate.h  logging.h  output.h
script/: canvasDrawer.ts  dom.ts  main.ts  timer.ts  webGLDrawer.ts
script/webGLDrawer/: bufferObject.ts  context.ts  fragmentShader.glsl  program.ts  setupStaticallyDrawnData.ts  vertexShader.glsl  vertices.ts
src/: config.c  constant.c  convert.c  coordinate.c  drawer.rs  init.c  integrate.c  lib.rs  logging.c  main.c  memory.c  output.c  random.rs  simulator.rs  timer.rs
src/simulator/: converter.rs  coordinate.rs  field.rs  init_field.rs  integrate.rs  metrics.rs  source.rs
src/simulator/converter/: complex.rs  dst.rs  rdft.rs
visualize/: 1d.py  2d.py
